# ferroflow

./: .gitignore  Cargo.toml  README.md
benches/: tensor_ops.rs
examples/: basic_ops.rs  batched_matmul.rs  matmul.rs  operator_overloading.rs  tensor_ops.rs  transposed_matmul.rs
src/: error.rs  lib.rs
src/compute/: cpu.rs  metal.rs  mod.rs
src/metal/: mod.rs  shaders.metal
src/tensor/: mod.rs  tests.rs
